# QENS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  test_color_viz_fresh.ipynb
docs/: api-reference.md  architecture.md  codes.md  concepts.md  decoder-comparison.md  decoders.md  error-models.md  extending.md  getting-started.md  index.md  simulation.md  syndrome-extraction.md  visualization.md
docs/notebooks/: 01_quickstart.ipynb  02_syndrome_extraction.ipynb  03_decoder_comparison.ipynb
examples/: 01_quickstart.py  02_surface_code_threshold.py  03_custom_noise_model.py  04_visualization_gallery.py
src/qens/: __init__.py
src/qens/codes/: __init__.py  base.py  color.py  lattice.py  repetition.py  surface.py
src/qens/core/: __init__.py  circuit.py  noise_channel.py  qubit.py  registry.py  types.py
src/qens/decoders/: __init__.py  base.py  lookup.py  mwpm.py  union_find.py
src/qens/noise/: __init__.py  base.py  composed.py  correlated.py  gate.py  leakage.py  measurement.py  pauli.py
src/qens/simulation/: __init__.py  experiment.py  frame.py  result.py  sampler.py
src/qens/utils/: __init__.py  pauli_algebra.py  random.py  sparse.py
src/qens/viz/: __init__.py  base.py  circuit_diagram.py  decoding_graph.py  lattice_view.py  stats.py  style.py
tests/: conftest.py
tests/test_codes/: test_color.py  test_repetition.py  test_surface.py
tests/test_core/: test_circuit.py  test_noise_channel.py  test_registry.py  test_types.py
tests/test_decoders/: test_lookup.py  test_mwpm.py  test_union_find.py
tests/test_integration/: test_color_transversal.py  test_repetition_end_to_end.py  test_surface_threshold.py
tests/test_noise/: test_correlated.py  test_gate.py  test_leakage.py  test_measurement.py  test_pauli.py
tests/test_simulation/: test_experiment.py  test_frame.py  test_sampler.py
tests/test_viz/: test_circuit_diagram.py  test_decoding_graph.py  test_lattice_view.py  test_stats.py
