[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qens"
version = "0.1.0"
description = "Quantum Error and Noise Simulation SDK"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Quipo" },
]
keywords = ["quantum", "error-correction", "noise-simulation", "qec", "stabilizer-codes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/quipo/qens"
Repository = "https://github.com/quipo/qens"
Issues = "https://github.com/quipo/qens/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
strict = true
packages = ["qens"]
mypy_path = "src"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E741"]  # Allow PauliOp.I (standard physics notation)
